[gd_scene load_steps=2 format=3 uid="uid://bnsbq016sfu1d"]

[ext_resource type="Script" uid="uid://cc24yno4ao4bm" path="res://scripts/player/camera_rig.gd" id="1_asq2o"]

[node name="camera_rig" type="Node3D"]
script = ExtResource("1_asq2o")

[node name="base_camera" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="background_viewport_container" type="SubViewportContainer" parent="base_camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_viewport" type="SubViewport" parent="base_camera/background_viewport_container"]

[node name="background_camera" type="Camera3D" parent="base_camera/background_viewport_container/background_viewport"]

[node name="foreground_viewport_container" type="SubViewportContainer" parent="base_camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="foreground_viewport" type="SubViewport" parent="base_camera/foreground_viewport_container"]
handle_input_locally = false
render_target_update_mode = 4

[node name="foreground_camera" type="Camera3D" parent="base_camera/foreground_viewport_container/foreground_viewport"]
